tests/marouter/errors/incomplete_districts/all_missing/errors.marouter
Warning: Missing origin '3' and destination '4' (24.00 vehicles).
Error: No valid vehicles loaded.
Quitting (on error).
